--- a/index.css
+++ b/index.css
@@ -87,6 +87,11 @@ header {
     margin: 20px;
 }
 
+.cartao:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
 .cartao img {
     width: 100%;
     height: 100%;
@@ -135,4 +140,66 @@ footer {
 
 .botaoHeader:hover {
     background-color: #663217;
+}
+
+.sideBarMenu {
+    position: absolute;
+    width: 150px;
+    height: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    top: 10px;
+}
+
+.barrinha {
+    height: 4px;
+    width: 20%;
+    background-color: #52180b;
+    border-radius: 1px;
+    margin-left: 10px;
+    margin-top: 2px;
+}
+
+.sideBarLinks {
+    position: absolute;
+    top: 0px;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    transition: all 0.3 ease-in-out;
+}
+
+.sideBarLinks a {
+    color: white;
+    text-decoration: none;
+    margin: 15px 0;
+    font-size: 1.2em;
+}
+
+.sideBarLinks a#closeButton {
+    color: rgb(239, 111, 111);
+    text-decoration: none;
+    font-size: 0.8em;
+    cursor: pointer;
+}
+
+.divMain {
+    margin-left: 0;
+    transition: margin-left 0.3s ease-in-out;
+}
+
+.sideBarLinks.aberto {
+    left: 0;
+}
+
+.divMain.sideBar {
+    margin-left: 250px;
 }
