--- a/index.css
+++ b/index.css
@@ -85,6 +85,8 @@ header {
     display: inline-block;
     overflow: hidden;
     margin: 20px;
+    transition-timing-function: ease-in-out;
+    cursor: pointer;
 }
 
 .cartao:hover {
@@ -101,7 +103,7 @@ header {
 
 .cartaoBotao {
     position: absolute;
-    bottom: 0px;
+    bottom: 8px;
     padding: 10px;
     left: 50%;
     transform: translateX(-50%);
@@ -116,7 +118,8 @@ header {
 }
 
 .cartaoBotao:hover {
-    background-color: rgba(210, 146, 107, 0.5);
+    background-color: rgba(210, 146, 107, 0.8);
+    width: 80%;
 }
 
 footer {
@@ -168,28 +171,35 @@ footer {
     left: -250px;
     width: 250px;
     height: 100%;
-    background-color: #333;
+    background-color: #a7663f;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     /* justify-content: center; */
     transition: all 0.3 ease-in-out;
+    padding-top: 26px;
 }
 
-.sideBarLinks a {
+.sideBarLinks a{
     color: white;
     text-decoration: none;
     margin: 15px 0;
     font-size: 1.2em;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.sideBarLinks button:hover {
+    background-color: #717171;
 }
 
 .sideBarLinks a#closeButton {
-    color: rgb(239, 111, 111);
+    color: black;
     text-decoration: none;
     font-size: 0.8em;
     cursor: pointer;
 }
+
 
 .divMain {
     margin-left: 0;
@@ -202,4 +212,34 @@ footer {
 
 .divMain.sideBar {
     margin-left: 250px;
+}
+
+.closeMenu {
+    position: absolute;
+    right: 0px;
+    top: 8px;
+    width: 32px;
+    height: 32px;
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.closeMenu:hover {
+    opacity: 1;
+}
+
+.closeMenu::before, .closeMenu::after {
+    position: absolute;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: #52180b;
+}
+
+.closeMenu::before {
+    transform: rotate(45deg);
+}
+
+.closeMenu::after {
+    transform: rotate(-45deg);
 }
