--- a/index.css
+++ b/index.css
@@ -1,11 +1,24 @@
+html {
+    width: 100%;
+    position: relative;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+}
+
 body {
     padding: 0;
     margin: 0;
+    height: 100%;
+    width: 100%;
+    position: relative;
 }
 
 header {
     width: 100%;
-    padding:20px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    height: 10%;
     background-color: #d2926b;
     color: white;
     text-align: center;
@@ -13,6 +26,10 @@ header {
     /* box-shadow: 0px 10px 12px rgba(0, 0, 136, 1); */
 }
 
+.fullBody {
+    height: 100%;
+    width: 100%;
+}
 
 .titulo:hover {
     transform: translateX(18px);
@@ -24,10 +41,9 @@ header {
 .slideshow {
     position: relative;
     width: 100%;
-    height: 70vh;
+    height: 76%;
     overflow: hidden;
-    margin-top: 20px;
-    margin-top: 0px;;
+    margin-top: 0px;
 }
 
 .slide {
@@ -124,11 +140,18 @@ header {
 
 footer {
     width: 100%;
-    padding: 50px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    height: 40%;
     background-color: #d2926b;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+footer p {
+    margin-left: 30px;
+}
+
 
 .botaoHeader {
     background-color: #edc29e;
@@ -143,6 +166,12 @@ footer {
 
 .botaoHeader:hover {
     background-color: #663217;
+}
+
+.sideBar {
+    height: 100%;
+    position: absolute;
+    top: 0;
 }
 
 .sideBarMenu {
@@ -204,14 +233,17 @@ footer {
 .divMain {
     margin-left: 0;
     transition: margin-left 0.3s ease-in-out;
+    height: 100%;
 }
 
 .sideBarLinks.aberto {
     left: 0;
+    height: 100%;
 }
 
 .divMain.sideBar {
     margin-left: 250px;
+    height: 100%;
 }
 
 .closeMenu {
